vcl/source/gdi/print3.cxx
@@ -588,7 +588,6 @@ bool Printer::ExecutePrintJob(const std::shared_ptr<PrinterController>& xControl
 
 void Printer::FinishPrintJob(const std::shared_ptr<PrinterController>& xController)
 {
-    xController->resetPrintArea();
     xController->resetPaperToLastConfigured();
     xController->jobFinished( xController->getJobState() );
 }
@@ -1046,17 +1045,6 @@ void vcl::ImplPrinterControllerData::resetPaperToLastConfigured()
     if (aCurSize != maDefaultPageSize)
         mxPrinter->SetPaperSizeUser(maDefaultPageSize);
     mxPrinter->Pop();
-}
-
-// reset the print area created by the Print Dialog to the page style's print area.
-void PrinterController::resetPrintArea()
-{
-    if (mpImplData->mxPrinter->IsUsePrintDialogSetting())
-    {
-        mpImplData->mxPrinter->ResetPrintArea(true);
-        mpImplData->mxPrinter->SetUsePrintDialogSetting(false);
-        getPageCount();
-    }
 }
 
 int PrinterController::getPageCountProtected() const
